Finishing Multi-TE code generation - working KV example